--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -4,21 +4,38 @@
 
 #                       General
 set-option -g default-terminal "screen-256color"          # enable 256 colors, had to use screen rather than xterm
-                                                          # see http://superuser.com/questions/424086/what-is-the-difference-between-screen-256-color-and-xterm-256color
-set -g history-limit 10000               # increase the scrollback history
+
+# enabling scrollback http://dan.carley.co/blog/2013/01/11/tmux-scrollback-with-iterm2/   
+set -g terminal-overrides 'xterm*:smcup@:rmcup@'
+                                                         # see http://superuser.com/questions/424086/what-is-the-difference-between-screen-256-color-and-xterm-256color
+set -g history-limit 30000               # increase the scrollback history
+
+set-option -g mouse on
 
 # ---------------------------------------------
 #                 Key bindings
 # ---------------------------------------------
 
-bind-key | split-window -h          # vertical split using <prefix> + |
-bind-key _ split-window -v          # horizontal split using <prefix> + _
+bind-key | split-window -h -c "#{pane_current_path}"        # vertical split using <prefix> + |
+bind-key _ split-window -v -c "#{pane_current_path}"         # horizontal split using <prefix> + _
 
 # Vim style pane selection
 bind h select-pane -L
 bind j select-pane -D 
 bind k select-pane -U
 bind l select-pane -R
+
+# Resizing 
+#bind -n C-J resize-pane -D 5
+#bind -n C-K resize-pane -U 5
+#bind -n C-H resize-pane -L 5
+#bind -n C-L resize-pane -R 5
+# Resizing 
+bind-key -n C-J resize-pane -D 5
+bind-key -n C-K resize-pane -U 5
+bind-key -n C-H resize-pane -L 5
+bind-key -n C-L resize-pane -R 5
+
 
 # use vim keys 
 #set -g status-keys vi
