--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -38,8 +38,8 @@ bind-key -n C-L resize-pane -R 5
 
 
 # use vim keys 
-#set -g status-keys vi
-#setw -g mode-keys vi
+set -g status-keys vi
+setw -g mode-keys vi
 
 
 # Theme
