--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,8 +1,10 @@
 
 # For more information on the ~/.tmux.config file:
 # http://man.cx/tmux
+#run-shell "powerline-daemon -q"
 
 #                       General
+set -s escape-time 0
 set-option -g default-terminal "screen-256color"          # enable 256 colors, had to use screen rather than xterm
 
 # enabling scrollback http://dan.carley.co/blog/2013/01/11/tmux-scrollback-with-iterm2/   
@@ -26,11 +28,6 @@ bind k select-pane -U
 bind l select-pane -R
 
 # Resizing 
-#bind -n C-J resize-pane -D 5
-#bind -n C-K resize-pane -U 5
-#bind -n C-H resize-pane -L 5
-#bind -n C-L resize-pane -R 5
-# Resizing 
 bind-key -n C-J resize-pane -D 5
 bind-key -n C-K resize-pane -U 5
 bind-key -n C-H resize-pane -L 5
@@ -41,6 +38,19 @@ bind-key -n C-L resize-pane -R 5
 set -g status-keys vi
 setw -g mode-keys vi
 
+bind -t vi-copy v begin-selection
+bind -t vi-copy y copy-selection
+
+
+
+# --------------------------------
+#         Powerline
+# --------------------------------
+#source "/Users/chapnickc/Library/Python/2.7/lib/python/site-packages/powerline/bindings/tmux"
+
+
+
+
 
 # Theme
 ## Status bar design
@@ -49,22 +59,19 @@ set -g status-position bottom
 setw -g clock-mode-style 24                    # 24 hour clock
 
 #  Adding elements to the status bar. For the battery percentage see  https://github.com/Goles/Battery
-set -g status-left " "
-set -g status-right "#[bold, bg=black,fg=colour10] %H:%M | %a %e %b %Y "
-set-option -g status-bg '#5a5ce1'
+# Disable showing the default window list component.
+set-window-option -g window-status-current-format ''
+set -g status-left-length 500
+set -g status-left "#[bold, bg=colour233,fg=colour47] Window: #I | Pane: #P  "
+set -g status-right "#[bold, bg=colour233,fg=colour201] %H:%M | %a %e %b %Y "
+set-option -g status-bg colour233
 
 
 # pane border
-set -g pane-active-border-fg colour10 
-set -g pane-border-fg black 
+set -g pane-active-border-fg colour47
+set -g pane-border-fg colour234
 
 
 # Easy config reload
 bind-key R source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
 
-
-# 1.9 open new panes in $PWD
-# bind '"' split-window -c "#{pane_current_path}"
-# bind % split-window -h -c "#{pane_current_path}"
-# bind c new-window -c "#{pane_current_path}"
-#
