--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -36,12 +36,31 @@ bind-key -n C-L resize-pane -R 5
 
 # use vim keys 
 set -g status-keys vi
+
+#bind -t vi-copy v begin-selection
+#bind -t vi-copy y copy-selection
+
+set -s escape-time 10
+
+#clipboard integration
+
+# Copy-paste integration
+set-option -g default-command "reattach-to-user-namespace -l bash"
+
+# Use vim keybindings in copy mode
 setw -g mode-keys vi
 
-bind -t vi-copy v begin-selection
-bind -t vi-copy y copy-selection
+# Setup 'v' to begin selection as in Vim
+bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 
-set -s escape-time 0
+# Update default binding of `Enter` to also use copy-pipe
+unbind -t vi-copy Enter
+bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+
+# Bind ']' to use pbpaste
+bind ] run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
+
 
 # --------------------------------
 #         Powerline
