--- a/iterm2/com.googlecode.iterm2.plist
+++ b/iterm2/com.googlecode.iterm2.plist
@@ -663,9 +663,9 @@
 	<key>NSWindow Frame NSFontPanel</key>
 	<string>482 158 627 374 0 0 1280 777 </string>
 	<key>NSWindow Frame SharedPreferences</key>
-	<string>209 232 796 473 0 0 1280 777 </string>
+	<string>209 144 918 495 0 0 1280 800 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>152 305 610 467 0 0 1280 777 </string>
+	<string>131 73 610 467 0 0 1280 800 </string>
 	<key>NSWindow Frame iTerm Window 1</key>
 	<string>152 325 570 452 0 0 1280 777 </string>
 	<key>New Bookmarks</key>
@@ -965,7 +965,7 @@
 			<key>Guid</key>
 			<string>B53753D2-6CA8-43BB-ADD2-68B49D5A67F6</string>
 			<key>Horizontal Spacing</key>
-			<real>1</real>
+			<real>0.8934193806475903</real>
 			<key>Idle Code</key>
 			<integer>0</integer>
 			<key>Jobs to Ignore</key>
@@ -1282,7 +1282,7 @@
 			<key>Non-ASCII Anti Aliased</key>
 			<true/>
 			<key>Normal Font</key>
-			<string>InconsolataForPowerline-dz 14</string>
+			<string>InconsolataForPowerline-g 14</string>
 			<key>Only The Default BG Color Uses Transparency</key>
 			<true/>
 			<key>Option Key Sends</key>
@@ -1367,7 +1367,7 @@
 			<key>Use Tab Color</key>
 			<false/>
 			<key>Vertical Spacing</key>
-			<real>1</real>
+			<real>1.0428157944277108</real>
 			<key>Visual Bell</key>
 			<true/>
 			<key>Window Type</key>
@@ -2481,6 +2481,8 @@
 	<true/>
 	<key>NoSyncNeverRemindPrefsChangesLostForFile_selection</key>
 	<integer>0</integer>
+	<key>NoSyncPermissionToShowTip</key>
+	<false/>
 	<key>NoSyncTimeOfFirstLaunchOfVersionWithTip</key>
 	<real>493420905.05135697</real>
 	<key>OnlyWhenMoreTabs</key>
@@ -2567,7 +2569,7 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2016-08-20T22:48:10Z</date>
+	<date>2016-08-22T14:52:40Z</date>
 	<key>SUSendProfileInfo</key>
 	<false/>
 	<key>SavePasteHistory</key>
