--- a/iterm2/com.googlecode.iterm2.plist
+++ b/iterm2/com.googlecode.iterm2.plist
@@ -669,9 +669,9 @@
 	<key>NSWindow Frame SUUpdateAlert</key>
 	<string>330 289 620 392 0 0 1280 777 </string>
 	<key>NSWindow Frame SharedPreferences</key>
-	<string>115 76 918 495 0 0 1280 777 </string>
+	<string>334 141 918 495 0 0 1280 800 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>271 207 610 467 0 0 1280 777 </string>
+	<string>131 73 610 467 0 0 1280 777 </string>
 	<key>NSWindow Frame iTerm Window 1</key>
 	<string>71 64 685 533 0 0 1280 777 </string>
 	<key>NSWindow Frame iTerm Window 2</key>
@@ -1375,7 +1375,7 @@
 			<key>Use Tab Color</key>
 			<false/>
 			<key>Vertical Spacing</key>
-			<real>1</real>
+			<real>1.0455689947289155</real>
 			<key>Visual Bell</key>
 			<true/>
 			<key>Window Type</key>
