--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -4,7 +4,7 @@
 #run-shell "powerline-daemon -q"
 
 #                       General
-
+set-option -g renumber-windows on
 set-option -g default-terminal "screen-256color"          # enable 256 colors, had to use screen rather than xterm
 
 # enabling scrollback http://dan.carley.co/blog/2013/01/11/tmux-scrollback-with-iterm2/   
