--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,8 +1,6 @@
 
 # For more information on the ~/.tmux.config file:
 # http://man.cx/tmux
-#run-shell "powerline-daemon -q"
-
 #                       General
 set-option -g renumber-windows on
 set-option -g default-terminal "screen-256color"          # enable 256 colors, had to use screen rather than xterm
@@ -86,8 +84,8 @@ setw -g clock-mode-style 24                    # 24 hour clock
 
 #  Adding elements to the status bar. For the battery percentage see  https://github.com/Goles/Battery
 # Disable showing the default window list component.
-#set-window-option -g window-status-current-format ''
-#set -g status-left "#[bold, bg=colour233,fg=colour47] Window: #I | Pane: #P  "
+set-window-option -g window-status-current-format ''
+set -g status-left "#[bold, bg=colour233,fg=colour47] Window: #I | Pane: #P  "
 set -g status-left-length 500
 set -g status-right "#(/usr/local/bin/battery -t) #[bold, bg=colour233,fg=colour201] | %H:%M | %a %e %b %Y "
 set-option -g status-bg colour233
