--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,12 +1,18 @@
 
 # For more information on the ~/.tmux.config file:
 # http://man.cx/tmux
+
+
+# PLUGINS
+set -g @plugin 'nhdaly/tmux-better-mouse-mode'
+set -g @scroll-speed-num-lines-per-scroll 5
 #                       General
 set-option -g renumber-windows on
 set-option -g default-terminal "screen-256color"          # enable 256 colors, had to use screen rather than xterm
 
 # enabling scrollback http://dan.carley.co/blog/2013/01/11/tmux-scrollback-with-iterm2/   
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
+
                                                          # see http://superuser.com/questions/424086/what-is-the-difference-between-screen-256-color-and-xterm-256color
 set -g history-limit 30000               # increase the scrollback history
 
@@ -110,3 +116,4 @@ setw -g window-status-bg colour235
 # Easy config reload
 bind-key R source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
 
+run '~/.tmux/plugins/tpm/tpm'
