--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -93,7 +93,7 @@ setw -g clock-mode-style 24                    # 24 hour clock
 set-window-option -g window-status-current-format ''
 set -g status-left "#[bold, bg=colour233,fg=colour47] Window: #I | Pane: #P  "
 set -g status-left-length 500
-set -g status-right "#(/usr/local/bin/battery -t) #[bold, bg=colour233,fg=colour201] | %H:%M | %a %e %b %Y "
+set -g status-right "#(/usr/local/bin/battery -pt) #[bold, bg=colour233,fg=colour201] | %H:%M | %a %e %b %Y "
 set-option -g status-bg colour233
 # pane border
 set -g pane-active-border-fg colour47
