--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -85,26 +85,33 @@ set-option -g bell-action none
 ## Status bar design
 set -g status on
 set -g status-position bottom
+set -g status-left-length 500
+set -g status-right-length 500
+
 setw -g clock-mode-style 24                    # 24 hour clock
+set-option -g status-bg colour234
+
+# pane border
+set -g pane-active-border-fg colour49
+set -g pane-border-fg colour240
+
+
 
 
 #  Adding elements to the status bar. For the battery percentage see  https://github.com/Goles/Battery
 # Disable showing the default window list component.
 set-window-option -g window-status-current-format ''
-set -g status-left "#[bold, bg=colour233,fg=colour47] Window: #I | Pane: #P  "
-set -g status-left-length 500
-set -g status-right "#(/usr/local/bin/battery -pt) #[bold, bg=colour233,fg=colour201] | %H:%M | %a %e %b %Y "
-set-option -g status-bg colour233
-# pane border
-set -g pane-active-border-fg colour47
-set -g pane-border-fg colour234
+
+set -g status-right "#[bold]#(/usr/local/bin/battery -pt) #[bold, bg=colour233,fg=colour201] | %H:%M | %a %e %b %Y "
 
 
 
 # window status
 set -g status-left ''       # Info on left (I don't have a session display for now)
+
 setw -g window-status-current-format "#[bg=colour235] #I#[fg=colour47]:#[fg=colour93]#P #[bg=colour234, fg=colour202] #W "
 setw -g window-status-format  "#[bg=colour236] #I #[bg=colour234, fg=colour236] #W "
+
 setw -g window-status-current-fg colour93
 setw -g window-status-current-bg colour234
 setw -g window-status-fg colour237
