--- a/iterm2/com.googlecode.iterm2.plist
+++ b/iterm2/com.googlecode.iterm2.plist
@@ -68211,7 +68211,7 @@
 	<key>NSWindow Frame UKCrashReporter</key>
 	<string>80 194 592 584 0 0 1280 778 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>152 284 610 489 0 0 1280 800 </string>
+	<string>131 73 610 489 0 0 1280 800 </string>
 	<key>NSWindow Frame iTerm Window 1</key>
 	<string>152 325 570 452 0 0 1280 777 </string>
 	<key>New Bookmarks</key>
@@ -68236,146 +68236,150 @@
 			<key>Ansi 0 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.0</real>
+				<real>0.23529411852359772</real>
 				<key>Green Component</key>
-				<real>0.0</real>
+				<real>0.20392157137393951</real>
 				<key>Red Component</key>
-				<real>0.0</real>
+				<real>0.18039216101169586</real>
 			</dict>
 			<key>Ansi 1 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.35380584001541138</real>
+				<real>0.18431372940540314</real>
 				<key>Green Component</key>
-				<real>0.37975850701332092</real>
+				<real>0.058823529630899429</real>
 				<key>Red Component</key>
-				<real>1</real>
+				<real>0.74117648601531982</real>
 			</dict>
 			<key>Ansi 10 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.56091833114624023</real>
+				<real>0.59607845544815063</real>
 				<key>Green Component</key>
-				<real>0.97338253259658813</real>
+				<real>0.91372549533843994</real>
 				<key>Red Component</key>
-				<real>0.86515980958938599</real>
+				<real>0.28627452254295349</real>
 			</dict>
 			<key>Ansi 11 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.69898539781570435</real>
+				<real>0.43137255311012268</real>
 				<key>Green Component</key>
-				<real>0.89980232715606689</real>
+				<real>0.87450981140136719</real>
 				<key>Red Component</key>
-				<real>0.93448394536972046</real>
+				<real>0.99215686321258545</real>
 			</dict>
 			<key>Ansi 12 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>1</real>
+				<real>0.75686275959014893</real>
 				<key>Green Component</key>
-				<real>0.78056418895721436</real>
+				<real>0.54509806632995605</real>
 				<key>Red Component</key>
-				<real>0.64889204502105713</real>
+				<real>0.16470588743686676</real>
 			</dict>
 			<key>Ansi 13 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>1</real>
+				<real>0.15294118225574493</real>
 				<key>Green Component</key>
-				<real>0.66839390993118286</real>
+				<real>0.27843138575553894</real>
 				<key>Red Component</key>
-				<real>0.86788153648376465</real>
+				<real>0.91764706373214722</real>
 			</dict>
 			<key>Ansi 14 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.97686588764190674</real>
+				<real>0.82745099067687988</real>
 				<key>Green Component</key>
-				<real>1</real>
+				<real>0.7137255072593689</real>
 				<key>Red Component</key>
-				<real>0.71730226278305054</real>
+				<real>0.62745100259780884</real>
 			</dict>
 			<key>Ansi 15 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.99982929229736328</real>
+				<real>1</real>
 				<key>Green Component</key>
 				<real>1</real>
 				<key>Red Component</key>
-				<real>0.99987733364105225</real>
+				<real>1</real>
 			</dict>
 			<key>Ansi 2 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.41247016191482544</real>
+				<real>0.43921568989753723</real>
 				<key>Green Component</key>
-				<real>0.91209155321121216</real>
+				<real>0.65490198135375977</real>
 				<key>Red Component</key>
-				<real>0.69528472423553467</real>
+				<real>0.20784313976764679</real>
 			</dict>
 			<key>Ansi 3 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.61240488290786743</real>
+				<real>0.20784313976764679</real>
 				<key>Green Component</key>
-				<real>0.84966868162155151</real>
+				<real>0.58039218187332153</real>
 				<key>Red Component</key>
-				<real>0.92030984163284302</real>
+				<real>0.9843137264251709</real>
 			</dict>
 			<key>Ansi 4 Color</key>
 			<dict>
+				<key>Alpha Component</key>
+				<real>1</real>
 				<key>Blue Component</key>
-				<real>0.96645122766494751</real>
+				<real>0.99883681535720825</real>
+				<key>Color Space</key>
+				<string>Calibrated</string>
 				<key>Green Component</key>
-				<real>0.66428118944168091</real>
+				<real>0.65533304214477539</real>
 				<key>Red Component</key>
-				<real>0.36596208810806274</real>
+				<real>0.46504727005958557</real>
 			</dict>
 			<key>Ansi 5 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>1</real>
+				<real>0.13725490868091583</real>
 				<key>Green Component</key>
-				<real>0.4175935685634613</real>
+				<real>0.14509804546833038</real>
 				<key>Red Component</key>
-				<real>0.91076451539993286</real>
+				<real>0.74117648601531982</real>
 			</dict>
 			<key>Ansi 6 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.96741926670074463</real>
+				<real>0.59215688705444336</real>
 				<key>Green Component</key>
-				<real>1</real>
+				<real>0.51372551918029785</real>
 				<key>Red Component</key>
-				<real>0.51017588376998901</real>
+				<real>0.46666666865348816</real>
 			</dict>
 			<key>Ansi 7 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.80998730659484863</real>
+				<real>1</real>
 				<key>Green Component</key>
-				<real>0.85460180044174194</real>
+				<real>1</real>
 				<key>Red Component</key>
-				<real>0.87252241373062134</real>
+				<real>1</real>
 			</dict>
 			<key>Ansi 8 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.19356094300746918</real>
+				<real>0.3333333432674408</real>
 				<key>Green Component</key>
-				<real>0.19360662996768951</real>
+				<real>0.29019609093666077</real>
 				<key>Red Component</key>
-				<real>0.19357019662857056</real>
+				<real>0.25098040699958801</real>
 			</dict>
 			<key>Ansi 9 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.501872718334198</real>
+				<real>0.18431372940540314</real>
 				<key>Green Component</key>
-				<real>0.54845702648162842</real>
+				<real>0.058823529630899429</real>
 				<key>Red Component</key>
-				<real>0.96163845062255859</real>
+				<real>0.74117648601531982</real>
 			</dict>
 			<key>Application Keypad Allowed</key>
 			<true/>
@@ -68384,11 +68388,11 @@
 			<key>Background Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.09135911613702774</real>
+				<real>0.08235294371843338</real>
 				<key>Green Component</key>
-				<real>0.091378688812255859</real>
+				<real>0.066666670143604279</real>
 				<key>Red Component</key>
-				<real>0.091364338994026184</real>
+				<real>0.047058824449777603</real>
 			</dict>
 			<key>Background Image Location</key>
 			<string></string>
@@ -68437,11 +68441,11 @@
 			<key>Cursor Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.73333334922790527</real>
+				<real>0.42352941632270813</real>
 				<key>Green Component</key>
-				<real>0.73333334922790527</real>
+				<real>0.42352941632270813</real>
 				<key>Red Component</key>
-				<real>0.73333334922790527</real>
+				<real>0.42352941632270813</real>
 			</dict>
 			<key>Cursor Guide Color</key>
 			<dict>
@@ -68459,11 +68463,11 @@
 			<key>Cursor Text Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>1</real>
+				<real>0.42352941632270813</real>
 				<key>Green Component</key>
-				<real>1</real>
+				<real>0.42352941632270813</real>
 				<key>Red Component</key>
-				<real>1</real>
+				<real>0.42352941632270813</real>
 			</dict>
 			<key>Cursor Type</key>
 			<integer>2</integer>
@@ -68482,11 +68486,11 @@
 			<key>Foreground Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.80998730659484863</real>
+				<real>1</real>
 				<key>Green Component</key>
-				<real>0.85460180044174194</real>
+				<real>1</real>
 				<key>Red Component</key>
-				<real>0.87252241373062134</real>
+				<real>1</real>
 			</dict>
 			<key>Guid</key>
 			<string>B53753D2-6CA8-43BB-ADD2-68B49D5A67F6</string>
@@ -68830,20 +68834,20 @@
 			<key>Selected Text Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.7527463436126709</real>
+				<real>1</real>
 				<key>Green Component</key>
-				<real>0.73378461599349976</real>
+				<real>1</real>
 				<key>Red Component</key>
-				<real>0.7153552770614624</real>
+				<real>1</real>
 			</dict>
 			<key>Selection Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.22383280098438263</real>
+				<real>0.13725490868091583</real>
 				<key>Green Component</key>
-				<real>0.23080787062644958</real>
+				<real>0.14509804546833038</real>
 				<key>Red Component</key>
-				<real>0.27125817537307739</real>
+				<real>0.74117648601531982</real>
 			</dict>
 			<key>Semantic History</key>
 			<dict>
@@ -70101,7 +70105,7 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2016-11-21T16:37:39Z</date>
+	<date>2016-12-02T08:50:31Z</date>
 	<key>SUSendProfileInfo</key>
 	<false/>
 	<key>SavePasteHistory</key>
