--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -5,7 +5,7 @@
 
 # PLUGINS
 set -g @plugin 'nhdaly/tmux-better-mouse-mode'
-set -g @scroll-speed-num-lines-per-scroll 5
+set -g @scroll-speed-num-lines-per-scroll 10
 #                       General
 set-option -g renumber-windows on
 set-option -g default-terminal "screen-256color"          # enable 256 colors, had to use screen rather than xterm
@@ -13,7 +13,7 @@ set-option -g default-terminal "screen-256color"          # enable 256 colors, h
 # enabling scrollback http://dan.carley.co/blog/2013/01/11/tmux-scrollback-with-iterm2/   
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 
-                                                         # see http://superuser.com/questions/424086/what-is-the-difference-between-screen-256-color-and-xterm-256color
+# see http://superuser.com/questions/424086/what-is-the-difference-between-screen-256-color-and-xterm-256color
 set -g history-limit 30000               # increase the scrollback history
 
 set-option -g mouse on
@@ -43,8 +43,7 @@ set -g status-keys vi
 
 #bind -t vi-copy v begin-selection
 #bind -t vi-copy y copy-selection
-
-set -s escape-time 10
+set -s escape-time 0 #10
 
 #clipboard integration
 
@@ -65,31 +64,27 @@ bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 # Bind ']' to use pbpaste
 bind ] run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
 
-
-# --------------------------------
-#         Powerline
-# --------------------------------
-#source "/Users/chapnickc/Library/Python/2.7/lib/python/site-packages/powerline/bindings/tmux"
-
+setw -g clock-mode-style 24                    # 24 hour clock
 # loud or quiet?
-set-option -g visual-activity off
-set-option -g visual-bell off
-set-option -g visual-silence off
 set-window-option -g monitor-activity off
-set-option -g bell-action none
-
-
+set-window-option -g aggressive-resiz
 
 
 # Theme
-## Status bar design
+# Status bar design
 set -g status on
 set -g status-position bottom
-set -g status-left-length 500
+set -g status-left-length 005
 set -g status-right-length 500
+set-option -g status-bg colour237
 
-setw -g clock-mode-style 24                    # 24 hour clock
-set-option -g status-bg colour234
+# misc
+set-option -g visual-activity off
+set-option -g visual-bell off
+set-option -g visual-silence off
+set-option -g bell-action none
+
+
 
 # pane border
 set -g pane-active-border-fg colour49
@@ -101,23 +96,15 @@ set -g pane-border-fg colour240
 #  Adding elements to the status bar. For the battery percentage see  https://github.com/Goles/Battery
 # Disable showing the default window list component.
 set-window-option -g window-status-current-format ''
-
 set -g status-right "#[bold]#(/usr/local/bin/battery -pt) #[bold, bg=colour233,fg=colour201] | %H:%M | %a %e %b %Y "
 
-
-
 # window status
-set -g status-left ''       # Info on left (I don't have a session display for now)
-
 setw -g window-status-current-format "#[bg=colour235] #I#[fg=colour47]:#[fg=colour93]#P #[bg=colour234, fg=colour202] #W "
-setw -g window-status-format  "#[bg=colour236] #I #[bg=colour234, fg=colour236] #W "
-
+setw -g window-status-format "#[bg=colour236] #I #[bg=colour234, fg=colour236] #W "
 setw -g window-status-current-fg colour93
 setw -g window-status-current-bg colour234
 setw -g window-status-fg colour237
 setw -g window-status-bg colour235
-
-
 
 
 # Easy config reload
