--- a/iterm2/com.googlecode.iterm2.plist
+++ b/iterm2/com.googlecode.iterm2.plist
@@ -68129,7 +68129,7 @@
 	<key>HideScrollbar</key>
 	<false/>
 	<key>HideTab</key>
-	<true/>
+	<false/>
 	<key>HighlightTabLabels</key>
 	<true/>
 	<key>HotKeyBookmark</key>
@@ -68157,7 +68157,7 @@
 	<key>MaxVertically</key>
 	<false/>
 	<key>NSColorPanelMode</key>
-	<string>6</string>
+	<string>5</string>
 	<key>NSColorPickerPageableNameListDefaults</key>
 	<string>1Crayons</string>
 	<key>NSColorPickerPreferredRGBEntryMode</key>
@@ -68205,7 +68205,7 @@
 		<integer>1</integer>
 	</dict>
 	<key>NSWindow Frame NSColorPanel</key>
-	<string>421 380 228 297 0 0 1280 800 </string>
+	<string>421 344 228 297 0 0 1280 800 </string>
 	<key>NSWindow Frame NSFontPanel</key>
 	<string>469 321 627 345 0 0 1280 800 </string>
 	<key>NSWindow Frame SUUpdateAlert</key>
@@ -68213,11 +68213,11 @@
 	<key>NSWindow Frame SessionsPreferences</key>
 	<string>269 139 606 456 0 0 1280 778 </string>
 	<key>NSWindow Frame SharedPreferences</key>
-	<string>9 374 770 381 0 0 1280 778 </string>
+	<string>273 363 770 381 0 0 1280 778 </string>
 	<key>NSWindow Frame UKCrashReporter</key>
 	<string>80 194 592 584 0 0 1280 778 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>131 73 570 477 0 0 1280 778 </string>
+	<string>640 76 640 524 0 0 1280 778 </string>
 	<key>NSWindow Frame iTerm Window 1</key>
 	<string>152 325 570 452 0 0 1280 777 </string>
 	<key>New Bookmarks</key>
@@ -68242,34 +68242,34 @@
 			<key>Ansi 0 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.30196079611778259</real>
+				<real>0.0</real>
 				<key>Green Component</key>
-				<real>0.30196079611778259</real>
+				<real>0.0</real>
 				<key>Red Component</key>
-				<real>0.30196079611778259</real>
+				<real>0.0</real>
 			</dict>
 			<key>Ansi 1 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.16862745583057404</real>
+				<real>0.22352941176470589</real>
 				<key>Green Component</key>
-				<real>0.16862745583057404</real>
+				<real>0.28627450980392155</real>
 				<key>Red Component</key>
-				<real>1</real>
+				<real>0.85490196078431369</real>
 			</dict>
 			<key>Ansi 10 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.3333333432674408</real>
+				<real>0.50980392156862742</real>
 				<key>Green Component</key>
-				<real>1</real>
+				<real>0.81960784313725488</real>
 				<key>Red Component</key>
-				<real>0.3333333432674408</real>
+				<real>0.51372549019607838</real>
 			</dict>
 			<key>Ansi 11 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.3333333432674408</real>
+				<real>0.48627450980392156</real>
 				<key>Green Component</key>
 				<real>1</real>
 				<key>Red Component</key>
@@ -68278,29 +68278,29 @@
 			<key>Ansi 12 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>1</real>
+				<real>0.94117647058823528</real>
 				<key>Green Component</key>
-				<real>0.80784314870834351</real>
+				<real>0.80784313725490198</real>
 				<key>Red Component</key>
-				<real>0.52941179275512695</real>
+				<real>0.62352941176470589</real>
 			</dict>
 			<key>Ansi 13 Color</key>
 			<dict>
 				<key>Blue Component</key>
 				<real>1</real>
 				<key>Green Component</key>
-				<real>0.3333333432674408</real>
+				<real>1</real>
 				<key>Red Component</key>
 				<real>1</real>
 			</dict>
 			<key>Ansi 14 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.0</real>
+				<real>0.94117647058823528</real>
 				<key>Green Component</key>
-				<real>0.84313726425170898</real>
+				<real>0.80784313725490198</real>
 				<key>Red Component</key>
-				<real>1</real>
+				<real>0.62745098039215685</real>
 			</dict>
 			<key>Ansi 15 Color</key>
 			<dict>
@@ -68314,76 +68314,72 @@
 			<key>Ansi 2 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.59607845544815063</real>
+				<real>0.31372549019607843</real>
 				<key>Green Component</key>
-				<real>0.9843137264251709</real>
+				<real>0.62352941176470589</real>
 				<key>Red Component</key>
-				<real>0.59607845544815063</real>
+				<real>0.31764705882352939</real>
 			</dict>
 			<key>Ansi 3 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.54901963472366333</real>
+				<real>0.29019607843137257</real>
 				<key>Green Component</key>
-				<real>0.90196079015731812</real>
+				<real>0.82352941176470584</real>
 				<key>Red Component</key>
-				<real>0.94117647409439087</real>
+				<real>1</real>
 			</dict>
 			<key>Ansi 4 Color</key>
 			<dict>
-				<key>Alpha Component</key>
-				<real>1</real>
 				<key>Blue Component</key>
-				<real>0.061463020741939545</real>
-				<key>Color Space</key>
-				<string>Calibrated</string>
+				<real>0.74509803921568629</real>
 				<key>Green Component</key>
-				<real>0.70396053791046143</real>
+				<real>0.61176470588235299</real>
 				<key>Red Component</key>
-				<real>0.99394869804382324</real>
+				<real>0.42745098039215684</real>
 			</dict>
 			<key>Ansi 5 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.67843139171600342</real>
-				<key>Green Component</key>
-				<real>0.87058824300765991</real>
-				<key>Red Component</key>
 				<real>1</real>
+				<key>Green Component</key>
+				<real>0.81568627450980391</real>
+				<key>Red Component</key>
+				<real>0.81568627450980391</real>
 			</dict>
 			<key>Ansi 6 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.62745100259780884</real>
+				<real>0.74509803921568629</real>
 				<key>Green Component</key>
-				<real>0.62745100259780884</real>
+				<real>0.61176470588235299</real>
 				<key>Red Component</key>
-				<real>1</real>
+				<real>0.43137254901960786</real>
 			</dict>
 			<key>Ansi 7 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.70196080207824707</real>
+				<real>1</real>
 				<key>Green Component</key>
-				<real>0.87058824300765991</real>
+				<real>1</real>
 				<key>Red Component</key>
-				<real>0.96078431606292725</real>
+				<real>1</real>
 			</dict>
 			<key>Ansi 8 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.33333333333333331</real>
+				<real>0.19607843137254902</real>
 				<key>Green Component</key>
-				<real>0.33333333333333331</real>
+				<real>0.19607843137254902</real>
 				<key>Red Component</key>
-				<real>0.33333333333333331</real>
+				<real>0.19607843137254902</real>
 			</dict>
 			<key>Ansi 9 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.3333333432674408</real>
+				<real>0.41960784313725491</real>
 				<key>Green Component</key>
-				<real>0.3333333432674408</real>
+				<real>0.4823529411764706</real>
 				<key>Red Component</key>
 				<real>1</real>
 			</dict>
@@ -68394,11 +68390,11 @@
 			<key>Background Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.20000000298023224</real>
+				<real>0.16862745098039217</real>
 				<key>Green Component</key>
-				<real>0.20000000298023224</real>
+				<real>0.16862745098039217</real>
 				<key>Red Component</key>
-				<real>0.20000000298023224</real>
+				<real>0.16862745098039217</real>
 			</dict>
 			<key>Background Image Location</key>
 			<string></string>
@@ -68428,11 +68424,11 @@
 			<key>Bold Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.0</real>
+				<real>0.86274509803921573</real>
 				<key>Green Component</key>
-				<real>0.84313726425170898</real>
+				<real>0.88235294117647056</real>
 				<key>Red Component</key>
-				<real>1</real>
+				<real>0.90196078431372551</real>
 			</dict>
 			<key>Character Encoding</key>
 			<integer>4</integer>
@@ -68447,11 +68443,11 @@
 			<key>Cursor Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.0</real>
+				<real>1</real>
 				<key>Green Component</key>
 				<real>1</real>
 				<key>Red Component</key>
-				<real>0.0</real>
+				<real>1</real>
 			</dict>
 			<key>Cursor Guide Color</key>
 			<dict>
@@ -68469,11 +68465,11 @@
 			<key>Cursor Text Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.0</real>
+				<real>0.86274509803921573</real>
 				<key>Green Component</key>
-				<real>0.0</real>
+				<real>0.88235294117647056</real>
 				<key>Red Component</key>
-				<real>0.0</real>
+				<real>0.90196078431372551</real>
 			</dict>
 			<key>Cursor Type</key>
 			<integer>2</integer>
@@ -68492,11 +68488,11 @@
 			<key>Foreground Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>1</real>
+				<real>0.86274509803921573</real>
 				<key>Green Component</key>
-				<real>1</real>
+				<real>0.88235294117647056</real>
 				<key>Red Component</key>
-				<real>1</real>
+				<real>0.90196078431372551</real>
 			</dict>
 			<key>Guid</key>
 			<string>B53753D2-6CA8-43BB-ADD2-68B49D5A67F6</string>
@@ -68818,7 +68814,7 @@
 			<key>Non-ASCII Anti Aliased</key>
 			<true/>
 			<key>Normal Font</key>
-			<string>MesloLGM-RegularForPowerline 14</string>
+			<string>Hack-Regular 15</string>
 			<key>Only The Default BG Color Uses Transparency</key>
 			<true/>
 			<key>Open Toolbelt</key>
@@ -68842,20 +68838,20 @@
 			<key>Selected Text Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.0</real>
+				<real>0.86274509803921573</real>
 				<key>Green Component</key>
-				<real>0.0</real>
+				<real>0.88235294117647056</real>
 				<key>Red Component</key>
-				<real>0.0</real>
+				<real>0.90196078431372551</real>
 			</dict>
 			<key>Selection Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>1</real>
+				<real>0.49411764705882355</real>
 				<key>Green Component</key>
-				<real>0.83529412746429443</real>
+				<real>0.39215686274509803</real>
 				<key>Red Component</key>
-				<real>0.70980393886566162</real>
+				<real>0.35294117647058826</real>
 			</dict>
 			<key>Semantic History</key>
 			<dict>
@@ -70115,7 +70111,7 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2016-12-12T17:09:14Z</date>
+	<date>2017-02-17T18:47:59Z</date>
 	<key>SUSendProfileInfo</key>
 	<false/>
 	<key>SavePasteHistory</key>
@@ -70125,7 +70121,7 @@
 	<key>ShowBookmarkName</key>
 	<true/>
 	<key>ShowFullScreenTabBar</key>
-	<true/>
+	<false/>
 	<key>ShowPaneTitles</key>
 	<true/>
 	<key>SmartPlacement</key>
@@ -70143,7 +70139,7 @@
 	<key>TabStyle</key>
 	<integer>1</integer>
 	<key>TabViewType</key>
-	<integer>0</integer>
+	<integer>1</integer>
 	<key>ThreeFingerEmulates</key>
 	<false/>
 	<key>TmuxDashboardLimit</key>
@@ -70177,7 +70173,7 @@
 	<key>findRegex_iTerm</key>
 	<false/>
 	<key>iTerm Version</key>
-	<string>3.0.12</string>
+	<string>3.0.14</string>
 	<key>kCPFavoritesUserDefaultsKey</key>
 	<array>
 		<data>
