--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,4 +1,8 @@
 
+# set Zsh as your default Tmux shell
+set-option -g default-command /usr/local/bin/zsh
+
+
 # For more information on the ~/.tmux.config file:
 # http://man.cx/tmux
 
@@ -40,6 +44,13 @@ bind-key -n C-L resize-pane -R 5
 
 # use vim keys 
 set -g status-keys vi
+# Use vim keybindings in copy mode
+setw -g mode-keys vi
+
+# Setup 'v' to begin selection as in Vim
+bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+
 
 #bind -t vi-copy v begin-selection
 #bind -t vi-copy y copy-selection
@@ -48,14 +59,7 @@ set -s escape-time 0 #10
 #clipboard integration
 
 # Copy-paste integration
-set-option -g default-command "reattach-to-user-namespace -l bash"
-
-# Use vim keybindings in copy mode
-setw -g mode-keys vi
-
-# Setup 'v' to begin selection as in Vim
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+set-option -g default-command "reattach-to-user-namespace -l zsh"
 
 # Update default binding of `Enter` to also use copy-pipe
 unbind -t vi-copy Enter
