--- a/iterm2/com.googlecode.iterm2.plist
+++ b/iterm2/com.googlecode.iterm2.plist
@@ -68157,9 +68157,9 @@
 	<key>MaxVertically</key>
 	<false/>
 	<key>NSColorPanelMode</key>
-	<string>5</string>
+	<string>6</string>
 	<key>NSColorPickerPageableNameListDefaults</key>
-	<string>1Crayons</string>
+	<string>1System</string>
 	<key>NSColorPickerPreferredRGBEntryMode</key>
 	<integer>2</integer>
 	<key>NSFontPanelAttributes</key>
@@ -68205,7 +68205,7 @@
 		<integer>1</integer>
 	</dict>
 	<key>NSWindow Frame NSColorPanel</key>
-	<string>421 344 228 297 0 0 1280 800 </string>
+	<string>421 308 228 297 0 0 1280 800 </string>
 	<key>NSWindow Frame NSFontPanel</key>
 	<string>469 321 627 345 0 0 1280 800 </string>
 	<key>NSWindow Frame SUUpdateAlert</key>
@@ -68213,11 +68213,11 @@
 	<key>NSWindow Frame SessionsPreferences</key>
 	<string>269 139 606 456 0 0 1280 778 </string>
 	<key>NSWindow Frame SharedPreferences</key>
-	<string>273 154 918 512 0 0 1280 778 </string>
+	<string>78 262 796 473 0 0 1280 800 </string>
 	<key>NSWindow Frame UKCrashReporter</key>
 	<string>80 194 592 584 0 0 1280 778 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>0 254 640 524 0 0 1280 778 </string>
+	<string>131 73 640 524 0 0 1280 778 </string>
 	<key>NSWindow Frame iTerm Window 1</key>
 	<string>152 325 570 452 0 0 1280 777 </string>
 	<key>New Bookmarks</key>
@@ -68242,146 +68242,154 @@
 			<key>Ansi 0 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.0</real>
+				<real>0.10051459074020386</real>
 				<key>Green Component</key>
-				<real>0.0</real>
+				<real>0.10051288455724716</real>
 				<key>Red Component</key>
-				<real>0.0</real>
+				<real>0.10051589459180832</real>
 			</dict>
 			<key>Ansi 1 Color</key>
 			<dict>
+				<key>Alpha Component</key>
+				<real>1</real>
 				<key>Blue Component</key>
-				<real>0.22352941176470589</real>
+				<real>0.424064040184021</real>
+				<key>Color Space</key>
+				<string>Calibrated</string>
 				<key>Green Component</key>
-				<real>0.28627450980392155</real>
+				<real>0.39206615090370178</real>
 				<key>Red Component</key>
-				<real>0.85490196078431369</real>
+				<real>0.9595637321472168</real>
 			</dict>
 			<key>Ansi 10 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.50980392156862742</real>
+				<real>0.14004382491111755</real>
 				<key>Green Component</key>
-				<real>0.81960784313725488</real>
+				<real>0.87921047210693359</real>
 				<key>Red Component</key>
-				<real>0.51372549019607838</real>
+				<real>0.59473341703414917</real>
 			</dict>
 			<key>Ansi 11 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.48627450980392156</real>
+				<real>0.38154411315917969</real>
 				<key>Green Component</key>
-				<real>1</real>
+				<real>0.83635991811752319</real>
 				<key>Red Component</key>
-				<real>1</real>
+				<real>0.87748134136199951</real>
 			</dict>
 			<key>Ansi 12 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.94117647058823528</real>
+				<real>0.99877572059631348</real>
 				<key>Green Component</key>
-				<real>0.80784313725490198</real>
+				<real>0.39599207043647766</real>
 				<key>Red Component</key>
-				<real>0.62352941176470589</real>
+				<real>0.61468899250030518</real>
 			</dict>
 			<key>Ansi 13 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>1</real>
+				<real>0.3728577196598053</real>
 				<key>Green Component</key>
-				<real>1</real>
+				<real>0.0</real>
 				<key>Red Component</key>
-				<real>1</real>
+				<real>0.95683503150939941</real>
 			</dict>
 			<key>Ansi 14 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.94117647058823528</real>
+				<real>0.92060363292694092</real>
 				<key>Green Component</key>
-				<real>0.80784313725490198</real>
+				<real>0.81977206468582153</real>
 				<key>Red Component</key>
-				<real>0.62745098039215685</real>
+				<real>0.34416967630386353</real>
 			</dict>
 			<key>Ansi 15 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>1</real>
+				<real>0.9359474778175354</real>
 				<key>Green Component</key>
-				<real>1</real>
+				<real>0.96549534797668457</real>
 				<key>Red Component</key>
-				<real>1</real>
+				<real>0.96537256240844727</real>
 			</dict>
 			<key>Ansi 2 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.31372549019607843</real>
+				<real>0.14004382491111755</real>
 				<key>Green Component</key>
-				<real>0.62352941176470589</real>
+				<real>0.87921047210693359</real>
 				<key>Red Component</key>
-				<real>0.31764705882352939</real>
+				<real>0.59473341703414917</real>
 			</dict>
 			<key>Ansi 3 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.29019607843137257</real>
+				<real>0.099807053804397583</real>
 				<key>Green Component</key>
-				<real>0.82352941176470584</real>
+				<real>0.51805692911148071</real>
 				<key>Red Component</key>
-				<real>1</real>
+				<real>0.98094809055328369</real>
 			</dict>
 			<key>Ansi 4 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.74509803921568629</real>
+				<real>0.99877572059631348</real>
 				<key>Green Component</key>
-				<real>0.61176470588235299</real>
+				<real>0.39599207043647766</real>
 				<key>Red Component</key>
-				<real>0.42745098039215684</real>
+				<real>0.61468899250030518</real>
 			</dict>
 			<key>Ansi 5 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>1</real>
+				<real>0.3728577196598053</real>
 				<key>Green Component</key>
-				<real>0.81568627450980391</real>
+				<real>0.0</real>
 				<key>Red Component</key>
-				<real>0.81568627450980391</real>
+				<real>0.95683503150939941</real>
 			</dict>
 			<key>Ansi 6 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.74509803921568629</real>
+				<real>0.92060363292694092</real>
 				<key>Green Component</key>
-				<real>0.61176470588235299</real>
+				<real>0.81977206468582153</real>
 				<key>Red Component</key>
-				<real>0.43137254901960786</real>
+				<real>0.34416967630386353</real>
 			</dict>
 			<key>Ansi 7 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>1</real>
+				<real>0.70993047952651978</real>
 				<key>Green Component</key>
-				<real>1</real>
+				<real>0.77144092321395874</real>
 				<key>Red Component</key>
-				<real>1</real>
+				<real>0.76960963010787964</real>
 			</dict>
 			<key>Ansi 8 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.19607843137254902</real>
+				<real>0.29652142524719238</real>
 				<key>Green Component</key>
-				<real>0.19607843137254902</real>
+				<real>0.36959609389305115</real>
 				<key>Red Component</key>
-				<real>0.19607843137254902</real>
+				<real>0.3829454779624939</real>
 			</dict>
 			<key>Ansi 9 Color</key>
 			<dict>
-				<key>Blue Component</key>
-				<real>0.41960784313725491</real>
-				<key>Green Component</key>
-				<real>0.4823529411764706</real>
-				<key>Red Component</key>
+				<key>Alpha Component</key>
 				<real>1</real>
+				<key>Blue Component</key>
+				<real>0.42323839664459229</real>
+				<key>Color Space</key>
+				<string>Calibrated</string>
+				<key>Green Component</key>
+				<real>0.39354228973388672</real>
+				<key>Red Component</key>
+				<real>0.96067523956298828</real>
 			</dict>
 			<key>Application Keypad Allowed</key>
 			<true/>
@@ -68390,11 +68398,11 @@
 			<key>Background Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.16862745098039217</real>
+				<real>0.10051459074020386</real>
 				<key>Green Component</key>
-				<real>0.16862745098039217</real>
+				<real>0.10051288455724716</real>
 				<key>Red Component</key>
-				<real>0.16862745098039217</real>
+				<real>0.10051589459180832</real>
 			</dict>
 			<key>Background Image Location</key>
 			<string></string>
@@ -68424,11 +68432,11 @@
 			<key>Bold Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.86274509803921573</real>
+				<real>0.70993047952651978</real>
 				<key>Green Component</key>
-				<real>0.88235294117647056</real>
+				<real>0.77144092321395874</real>
 				<key>Red Component</key>
-				<real>0.90196078431372551</real>
+				<real>0.76960963010787964</real>
 			</dict>
 			<key>Character Encoding</key>
 			<integer>4</integer>
@@ -68443,11 +68451,11 @@
 			<key>Cursor Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>1</real>
+				<real>0.92647796869277954</real>
 				<key>Green Component</key>
-				<real>1</real>
+				<real>0.96674919128417969</real>
 				<key>Red Component</key>
-				<real>1</real>
+				<real>0.96554505825042725</real>
 			</dict>
 			<key>Cursor Guide Color</key>
 			<dict>
@@ -68465,11 +68473,11 @@
 			<key>Cursor Text Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.86274509803921573</real>
+				<real>0.70993047952651978</real>
 				<key>Green Component</key>
-				<real>0.88235294117647056</real>
+				<real>0.77144092321395874</real>
 				<key>Red Component</key>
-				<real>0.90196078431372551</real>
+				<real>0.76960963010787964</real>
 			</dict>
 			<key>Cursor Type</key>
 			<integer>2</integer>
@@ -68488,11 +68496,11 @@
 			<key>Foreground Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.86274509803921573</real>
+				<real>0.70993047952651978</real>
 				<key>Green Component</key>
-				<real>0.88235294117647056</real>
+				<real>0.77144092321395874</real>
 				<key>Red Component</key>
-				<real>0.90196078431372551</real>
+				<real>0.76960963010787964</real>
 			</dict>
 			<key>Guid</key>
 			<string>B53753D2-6CA8-43BB-ADD2-68B49D5A67F6</string>
@@ -68838,20 +68846,20 @@
 			<key>Selected Text Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.86274509803921573</real>
+				<real>0.70993047952651978</real>
 				<key>Green Component</key>
-				<real>0.88235294117647056</real>
+				<real>0.77144092321395874</real>
 				<key>Red Component</key>
-				<real>0.90196078431372551</real>
+				<real>0.76960963010787964</real>
 			</dict>
 			<key>Selection Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.49411764705882355</real>
+				<real>0.20521116256713867</real>
 				<key>Green Component</key>
-				<real>0.39215686274509803</real>
+				<real>0.20520767569541931</real>
 				<key>Red Component</key>
-				<real>0.35294117647058826</real>
+				<real>0.20521381497383118</real>
 			</dict>
 			<key>Semantic History</key>
 			<dict>
@@ -70111,7 +70119,7 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2017-03-06T23:18:43Z</date>
+	<date>2017-03-10T03:16:07Z</date>
 	<key>SUSendProfileInfo</key>
 	<false/>
 	<key>SavePasteHistory</key>
