--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,31 +1,37 @@
-
+# # For more information on the .tmux.config file, 
+# http://man.cx/tmux
+ 
 # set Zsh as your default Tmux shell
 set-option -g default-command /usr/local/bin/zsh
 
 
-# For more information on the ~/.tmux.config file:
-# http://man.cx/tmux
-
-
 # PLUGINS
+set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'nhdaly/tmux-better-mouse-mode'
 set -g @scroll-speed-num-lines-per-scroll 10
-#                       General
-set-option -g renumber-windows on
-set-option -g default-terminal "screen-256color"          # enable 256 colors, had to use screen rather than xterm
+
+# GENERAL
+set-option -g default-terminal "screen-256color" 
 
 # enabling scrollback http://dan.carley.co/blog/2013/01/11/tmux-scrollback-with-iterm2/   
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 
-# see http://superuser.com/questions/424086/what-is-the-difference-between-screen-256-color-and-xterm-256color
+
+set -s escape-time 0 
+set -g mouse on
 set -g history-limit 30000               # increase the scrollback history
+set -g status-keys vi               # use vim keys 
+setw -g mode-keys vi                # vim keys for copy mode
+setw -g clock-mode-style 24 
+set-option -g renumber-windows on
+# loud or quiet?
+set-window-option -g monitor-activity off
 
-set-option -g mouse on
 
-# ---------------------------------------------
-#                 Key bindings
-# ---------------------------------------------
 
+
+
+# KEY BINDINGS
 bind-key | split-window -h -c "#{pane_current_path}"        # vertical split using <prefix> + |
 bind-key _ split-window -v -c "#{pane_current_path}"         # horizontal split using <prefix> + _
 
@@ -42,22 +48,14 @@ bind-key -n C-H resize-pane -L 5
 bind-key -n C-L resize-pane -R 5
 
 
-# use vim keys 
-set -g status-keys vi
-# Use vim keybindings in copy mode
-setw -g mode-keys vi
-
 # Setup 'v' to begin selection as in Vim
 bind-key -t vi-copy v begin-selection
 bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 
 
-#bind -t vi-copy v begin-selection
-#bind -t vi-copy y copy-selection
-set -s escape-time 0 #10
 
-#clipboard integration
-
+# CLIPBOARD 
+ 
 # Copy-paste integration
 set-option -g default-command "reattach-to-user-namespace -l zsh"
 
@@ -67,11 +65,6 @@ bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
 # Bind ']' to use pbpaste
 bind ] run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
-
-setw -g clock-mode-style 24                    # 24 hour clock
-# loud or quiet?
-set-window-option -g monitor-activity off
-set-window-option -g aggressive-resiz
 
 
 # Theme
@@ -95,11 +88,11 @@ set -g pane-active-border-fg colour49
 set -g pane-border-fg colour240
 
 
-
-
-#  Adding elements to the status bar. For the battery percentage see  https://github.com/Goles/Battery
+ 
 # Disable showing the default window list component.
 set-window-option -g window-status-current-format ''
+
+#  Battery project at https://github.com/Goles/Battery
 set -g status-right "#[bold]#(/usr/local/bin/battery -pt) #[bold, bg=colour233,fg=colour201] | %H:%M | %a %e %b %Y "
 
 # window status
@@ -115,3 +108,7 @@ setw -g window-status-bg colour235
 bind-key R source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
 
 run '~/.tmux/plugins/tpm/tpm'
+
+# Fixes iterm2 integration. Should go after "run '~/.tmux/plugins/tpm/tpm'"
+setw -g aggressive-resize off
+
